--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Munging Metadata
-description: "A Technical Blog by Sam Hume"
+title: Sam Hume's Blog
+description: "Munging Metadata: A Technical Blog by Sam Hume"
 author:
   name: "Sam Hume"
   email: "humedatalabs@gmail.com"
@@ -10,7 +10,7 @@ baseurl: /
 source: .
 destination: ./_site
 permalink: /:title
-paginate: 3
+paginate: 12
 paginate_path: /page/:num/
 
 defaults:
